# functionsExercise

./: CMakeLists.txt  README.md  README.txt
Uml/: uml.txt
include/: CMakeLists.txt  Complex.h  Compose_functions.h  Function.h  Function_list.h  Ln.h  Log.h  Mul_functions.h  Poly.h  Sin.h  Sum_functions.h  macros.h
src/: CMakeLists.txt  Complex.cpp  Compose_functions.cpp  Function.cpp  Function_list.cpp  Ln.cpp  Log.cpp  Mul_functions.cpp  Poly.cpp  Sin.cpp  Sum_functions.cpp  main.cpp
